platform/casdoor/casdoor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casdoor
  namespace: casdoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: casdoor
  template:
    metadata:
      labels:
        app: casdoor
    spec:
      containers:
        - name: casdoor
          image: __IMAGE_REPOSITORY__/casbin-casdoor:__CASDOOR_VERSION__
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: conf
              mountPath: /conf
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 20
      volumes:
        - name: conf
          configMap:
            name: casdoor-conf
---
apiVersion: v1
kind: Service
metadata:
  name: casdoor
  namespace: casdoor
spec:
  selector:
    app: casdoor
  ports:
    - port: 8000
      targetPort: 8000
