platform/casdoor/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: casdoor-postgres
  namespace: casdoor
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: casdoor-postgres
  template:
    metadata:
      labels:
        app: casdoor-postgres
    spec:
      containers:
        - name: postgres
          image: __IMAGE_REPOSITORY__/docker.io.bitnami.postgresql:16.3.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: casdoor-postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: casdoor-postgres
  namespace: casdoor
spec:
  selector:
    app: casdoor-postgres
  ports:
    - port: 5432
      targetPort: 5432
